# workflows

./: .tasks.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yaml
src/: config.rs  fzf_intergration.rs  git_intergration.rs  intergrations.rs  local_projects.rs  main.rs  projects.rs  repo.rs  tmuxinator_intergration.rs
src/commands/: borrow.rs  clone.rs  delete.rs  health.rs  help.rs  list.rs  mod.rs  new.rs  open.rs
src/config/: fzf.rs  general.rs  git.rs  github.rs  mod.rs  templates.rs  tmuxinator.rs
src/intergrations/: fzf.rs  fzf_intergration.rs  gh.rs  git.rs  git_intergration.rs  mod.rs  tmux.rs  tmuxinator.rs  tmuxinator_intergration.rs
