[package]
name = "workflows"
version = "0.7.1"
authors=["Daniel Ronalds"]
edition = "2021"
description="A cli tool for creating a seemless workflow with remote and local git repos"
license="MIT"
readme="README.md"
repository="https://github.com/danielronalds/workflows"
keywords=["workflow","cli"]
categories=["command-line-utilities","filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casual = "0.2.0"
colored = "2.0.4"
dirs = "5.0.1"
fzf-wrapped = "0.1.4"
serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"
which = "5.0.0"
